[package]
name = "rust-arduino-snake"
version = "0.1.0"
authors = ["hendrik.loewe <hendrikloewe3@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-arduino-snake"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
max7219 = "0.4.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
